# xup

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/xup/: auth.py  config.py  main.py  models.py  schemas.py  ws_manager.py
backend/xup/routers/: auth_router.py  challenge_router.py  party_router.py  users_router.py  ws_router.py
docker/: Caddyfile  entrypoint-frontend.sh  entrypoint.sh  init.sql  nginx.conf
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  challenges.ts  client.ts  parties.ts  users.ts
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/i18n/: ca.json  en.json  es.json  index.ts
frontend/src/pages/: GuestPage.tsx  HomePage.tsx  JoinPage.tsx  LobbyPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: a647a5ab35e3_initial.py
migrations/versions/2026/03/: 28_2354_58_6445ac653ad2_add_guest_users.py  29_add_is_admin.py  30_add_display_name.py
src/xup/: config.py  database.py  main.py  models.py  templating.py
src/xup/routers/: auth_router.py  lobby_router.py  party_router.py
src/xup/templates/: base.html  lobby.html  login.html  register.html
templates/: home.html
tests/: conftest.py  test_auth.py  test_challenges.py  test_parties.py
(+1 files in other folders)
